apps/prometheus/base/volumeclaimtemplate-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus-alertmanager
  namespace: prometheus
spec:
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
